lifecycle: implement RFC 0006 application ownership